<resources>
	<string name="app_name">wuej_0</string>
	<string name="main_maps">MAPS</string>
	<string name="main_setting">SETTING</string>
	<string name="main_update">UPDATE</string>
	<string name="maps_unknown_longitude">Unknown Longitude</string>
	<string name="maps_unknown_latitude">Unknown Latitude</string>
	<string name="maps_location_unavailable">Location Unavailable</string>
	<string name="setting_provider">Location Provider</string>
	<string name="setting_provider_network">Network</string>
	<string name="setting_provider_gps">GPS</string>
	<string name="setting_provider_gps_hardware">GPS Hardware</string>
	<string name="setting_provider_passive">Passive</string>
	<string name="setting_provider_fused">Fused</string>
	<string name="setting_min_time">Minimum Time</string>
	<string name="setting_min_time_0">Frequent</string>
	<string name="setting_min_time_1">4096ms</string>
	<string name="setting_min_time_2">16384ms</string>
	<string name="setting_min_time_3">65536ms</string>
	<string name="setting_min_distance">Minimum Distance</string>
	<string name="setting_min_distance_0">Frequent</string>
	<string name="setting_min_distance_1">4m</string>
	<string name="setting_min_distance_2">16m</string>
	<string name="setting_min_distance_3">64m</string>
	<string name="setting_maps_source">Maps Source</string>
	<string name="setting_maps_source_tian_dih_tuq">Tian Dih Tuq</string>
	<string name="setting_maps_source_giq_linq_i">Giq Linq I</string>
	<string name="setting_maps_source_suih_ywei_dih_kjou">Suih Ywei Dih Kjou</string>
	<string name="setting_maps_source_arc_gis">ArcGIS</string>
	<string name="setting_maps_source_yandex">Yandex</string>
	<string name="setting_maps_source_bing">Bing</string>
	<string name="setting_maps_source_auto_navi_style_7">AutoNavi Style 7</string>
	<string name="setting_maps_source_auto_navi_style_8">AutoNavi Style 8</string>
	<string name="setting_maps_source_tencent">Tencent</string>
	<string name="setting_maps_source_tencent_styleid_2">Tencent Style 2</string>
	<string name="setting_maps_source_tencent_styleid_3">Tencent Style 3</string>
	<string name="setting_maps_source_tencent_styleid_4">Tencent Style 4</string>
	<string name="setting_maps_source_tencent_styleid_8">Tencent Style 8</string>
	<string name="setting_maps_source_tencent_styleid_9">Tencent Style 9</string>
	<string name="setting_download_caching">Download Caching</string>
	<string name="setting_download_cached">%s of map tiles cached</string>
	<string name="setting_download_caching_clear">Clear</string>
	<string name="setting_download_caching_trim">Trim</string>
	<string name="setting_server_addr">Server Address</string>
	<string name="setting_server_addr_default" translatable="false">http://buhzzi.com</string>
	<string name="update_download_info">Here you can download files from input address and save it on some certain path.</string>
	<string name="update_download_title">Downloading with \"Wuej_0\"</string>
	<string name="update_input_address">Input an Address Here</string>
	<string name="update_download">Choose a Path and Download to There</string>
	<string name="update_install_info">Here you can install or update an application from APK file on some certain path.</string>
	<string name="update_install">Choose a Path and Install from There</string>
</resources>
