<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
>
	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
	>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:gravity="center"
		>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="4dp"
				android:padding="4dp"
				android:background="@color/design_default_color_secondary"
				android:text="@string/update_download_info"
				android:textColor="@color/design_default_color_on_secondary"
				android:fontFamily="@font/xeufont_ascii"
				android:textSize="32sp"
			/>
			<EditText
				android:id="@+id/downloadAddrEditText"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:textSize="16sp"
				android:inputType="text"
				android:importantForAutofill="no"
				android:hint="@string/update_input_address"
			/>
			<Button
				android:id="@+id/downloadButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="4dp"
				android:textColor="@color/design_default_color_on_primary"
				android:text="@string/update_download"
				android:fontFamily="@font/xeufont_ascii"
				android:textSize="16sp"
			/>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="4dp"
				android:padding="4dp"
				android:background="@color/design_default_color_secondary"
				android:text="@string/update_install_info"
				android:textColor="@color/design_default_color_on_secondary"
				android:fontFamily="@font/xeufont_ascii"
				android:textSize="32sp"
			/>
			<Button
				android:id="@+id/installButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="4dp"
				android:textColor="@color/design_default_color_on_primary"
				android:text="@string/update_install"
				android:fontFamily="@font/xeufont_ascii"
				android:textSize="16sp"
			/>
		</LinearLayout>
	</ScrollView>
</RelativeLayout>
