<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
>
	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
	>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:gravity="center"
		>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="4dp"
				android:padding="4dp"
				android:background="@color/design_default_color_secondary"
				android:text="@string/setting_provider"
				android:textColor="@color/design_default_color_on_secondary"
				android:fontFamily="@font/xeufont_ascii"
				android:textSize="32sp"
			/>
			<LinearLayout
				android:id="@+id/providerLinearLayout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:gravity="center"
			/>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="4dp"
				android:padding="4dp"
				android:background="@color/design_default_color_secondary"
				android:text="@string/setting_min_time"
				android:textColor="@color/design_default_color_on_secondary"
				android:fontFamily="@font/xeufont_ascii"
				android:textSize="32sp"
			/>
			<LinearLayout
				android:id="@+id/minTimeLinearLayout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:gravity="center"
			/>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="4dp"
				android:padding="4dp"
				android:background="@color/design_default_color_secondary"
				android:text="@string/setting_min_distance"
				android:textColor="@color/design_default_color_on_secondary"
				android:fontFamily="@font/xeufont_ascii"
				android:textSize="32sp"
			/>
			<LinearLayout
				android:id="@+id/minDistanceLinearLayout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:gravity="center"
			/>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="4dp"
				android:padding="4dp"
				android:background="@color/design_default_color_secondary"
				android:text="@string/setting_maps_source"
				android:textColor="@color/design_default_color_on_secondary"
				android:fontFamily="@font/xeufont_ascii"
				android:textSize="32sp"
			/>
			<LinearLayout
				android:id="@+id/mapsSourceLinearLayout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:gravity="center"
			/>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="4dp"
				android:padding="4dp"
				android:background="@color/design_default_color_secondary"
				android:text="@string/setting_download_caching"
				android:textColor="@color/design_default_color_on_secondary"
				android:fontFamily="@font/xeufont_ascii"
				android:textSize="32sp"
			/>
			<TextView
				android:id="@+id/downloadCachingTextView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="4dp"
				android:padding="4dp"
				android:background="@color/design_default_color_primary_variant"
				android:textColor="@color/design_default_color_on_primary"
				android:fontFamily="@font/xeufont_ascii"
				android:textSize="16sp"
			/>
			<SeekBar
				android:id="@+id/downloadCachingSeekBar"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:max="0x10000000"
			/>
			<TextView
				android:id="@+id/downloadCachedTextView"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="4dp"
				android:padding="4dp"
				android:gravity="center"
				android:background="@color/design_default_color_primary_variant"
				android:textColor="@color/design_default_color_on_primary"
				android:fontFamily="@font/xeufont_ascii"
				android:textSize="16sp"
			/>
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:gravity="center"
			>
				<Button
					android:id="@+id/clearDownloadCachingButton"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:layout_margin="4dp"
					android:textColor="@color/design_default_color_on_primary"
					android:text="@string/setting_download_caching_clear"
					android:fontFamily="@font/xeufont_ascii"
					android:textSize="16sp"
				/>
				<Button
					android:id="@+id/trimDownloadCachingButton"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:layout_margin="4dp"
					android:textColor="@color/design_default_color_on_primary"
					android:text="@string/setting_download_caching_trim"
					android:fontFamily="@font/xeufont_ascii"
					android:textSize="16sp"
				/>
			</LinearLayout>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="4dp"
				android:padding="4dp"
				android:background="@color/design_default_color_secondary"
				android:text="@string/setting_server_addr"
				android:textColor="@color/design_default_color_on_secondary"
				android:fontFamily="@font/xeufont_ascii"
				android:textSize="32sp"
			/>
			<EditText
				android:id="@+id/serverAddrEditText"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:text="@string/setting_server_addr_default"
				android:textSize="16sp"
				android:inputType="text"
				android:importantForAutofill="no"
			/>
		</LinearLayout>
	</ScrollView>
</RelativeLayout>
